add right aside

--- a/index.html
+++ b/index.html
@@ -1031,19 +1031,33 @@
 
 <!-- ASIDE RIGHT START -->
             <aside class="aside-right">
-                <h2 class="aside-title">Наши&nbsp;преимущества</h2>
-                <div class="pulse">
-                    <div class="pulse-line left-line"></div>
-                    <div class="pulse-line righ-line"></div>
+                <div class="aside-item">
+                    <h2 class="aside-title">Наши&nbsp;преимущества</h2>
+                    <div class="pulse">
+                        <div class="pulse-line left-line"></div>
+                        <div class="pulse-line righ-line"></div>
+                    </div>
+                    <div class="aside-benefits">
+                        <a href="" class="aside-link">Крупнейшая&nbsp;компания</a>
+                        <a href="" class="aside-link">Рядом&nbsp;с&nbsp;метро</a>
+                        <a href="" class="aside-link">Бесплатная&nbsp;парковка</a>
+                        <a href="" class="aside-link">Доставка&nbsp;бесплатно</a>
+                        <a href="" class="aside-link">Комплексы&nbsp;РС-300 Express</a>
+                        <a href="" class="aside-link">Квалифицированные инжинеры</a>
+                        <a href="" class="aside-link">Гарантия конфиденциальности</a>                    
+                    </div>
                 </div>
-                <div class="aside-item aside-benefits">
-                    <a href="" class="aside-link">Крупнейшая&nbsp;компания</a>
-                    <a href="" class="aside-link">Рядом&nbsp;с&nbsp;метро</a>
-                    <a href="" class="aside-link">Бесплатная&nbsp;парковка</a>
-                    <a href="" class="aside-link">Доставка&nbsp;бесплатно</a>
-                    <a href="" class="aside-link">Комплексы&nbsp;РС-300 Express</a>
-                    <a href="" class="aside-link">Квалифицированные инжинеры</a>
-                    <a href="" class="aside-link">Гарантия конфиденциальности</a>                    
+                <div class="aside-item aside-review">
+                    <h2 class="aside-title">Отзывы клиентов</h2>
+                    <div class="pulse">
+                        <div class="pulse-line left-line"></div>
+                        <div class="pulse-line righ-line"></div>
+                    </div>  
+                    <div class="aside-review-img">
+                        <img src="img/image/sec18-22.png" alt="" title="">
+                    </div>
+                    <div class="descr">«Группа компаний "Детский мир" выражает благодарность специализированному центру восстановления информации Storelab и в частности сотрудникам Вашей компании за профессионализм в работе и оперативность в исполнении заказываемых работ.»</div>
+                    <a href="" class="aside-link">Все отзывы</a>                    
                 </div>
             </aside>
 <!-- ASIDE RIGHT START -->
