--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                 </div>
 
                 <div class="post-container fifteenth-block">
-                    <h2 class="title-small">Отзывы клиентов</h2>
+                    <h2 class="title-small">Как работает восстановление данных</h2>
                     <div class="grid">
                         <div class="grid-item">
                             <p class="descr">
@@ -633,87 +633,6 @@
                     
                 </div>
 
-                <div class="post-container seventeenth-block">
-                    <h2 class="title-small">Наши кейсы | Примеры восстановления данных</h2>
-                    <div class="grid">
-                        <div class="grid-item">
-                            <a href="" class="case-img"><img src="img/image/sec17-1.png" alt=""></a>
-                            <div class="case-content">
-                                <div class="case-data">12 / 03 / 2023</div>
-                                <div class="case-title"><a href="">Восстановление RAID массива из сервера HP после наводнения<div class="hover-arrow">&nbsp;&nbsp;→</div></a></div>
-                                <div class="case-descr">
-                                    Восстановление RAID массива из сервера HP после наводнения. Сервер утонул вместе с жесткими дисками. Восемь SAS винчестеров, из них два по 450 Gb, остальные по 400 Gb.
-                                </div>
-                            </div>
-
-
-                        </div>
-                        <div class="grid-item">
-                            <a href="" class="case-img"><img src="img/image/sec17-2.png" alt=""></a>
-                            <div class="case-content">
-                                <div class="case-data">11/ 03 / 2023</div>
-                                <div class="case-title"><a href="">Восстановление RAID 10 массива из сервера Dell на Dell PRM 10K SAS<div class="hover-arrow">&nbsp;&nbsp;→</div></a></div>
-                                <div class="case-descr">
-                                    RAID 10 массив работал в сервере Dell. Это основной почтовый сервер компании. Сначала пропал доступ на второй раздел, операционка работала. Перезагрузили сервер, после чего первый раздел стал недоступен.
-                                </div>
-                            </div>
-
-
-                        </div>
-                        <div class="grid-item">
-                            <a href="" class="case-img"><img src="img/image/sec17-3.png" alt=""></a>
-                            <div class="case-content">
-                                <div class="case-data">10 / 03 / 2023</div>
-                                <div class="case-title"><a href="">Восстановление RAID 5 массива на HP DG146BB976 / Seagate ST9146802SS<div class="hover-arrow">&nbsp;&nbsp;→</div></a></div>
-                                <div class="case-descr">
-                                    RAID 5 собран на четырех жестких дисках HP DG146BB976 / Seagate ST9146802SS по 146 Gb SAS. Ночью, одновременно, два диска из четырех вышли из строя. Статус массива Error.
-                                </div>
-                            </div>
-
-
-                        </div>
-                        <div class="grid-item">
-                            <a href="" class="case-img"><img src="img/image/sec17-4.png" alt=""></a>
-                            <div class="case-content">
-                                <div class="case-data">09 / 03 / 2023</div>
-                                <div class="case-title"><a href="">Восстановление жесткого диска Hitachi HGST HDS721050CLA662 (500GB)<div class="hover-arrow">&nbsp;&nbsp;→</div></a></div>
-                                <div class="case-descr">
-                                    Клиент сдал на восстановление жесткий диск Hitachi HDS721050CLA662. Диск пришел со вскрытым гермоблоком, наклейками других компаний. Магнитная поверхность подпилена по всем головкам.
-                                </div>
-                            </div>
-
-
-                        </div>
-                        <div class="grid-item">
-                            <a href="" class="case-img"><img src="img/image/sec17-5.png" alt=""></a>
-                            <div class="case-content">
-                                <div class="case-data">08 / 03 / 2023</div>
-                                <div class="case-title">
-                                    <a href="">Восстановление данных жесткого диска Seagate ST4000LM024 (4ТБ)<div class="hover-arrow">&nbsp;&nbsp;→</div></a></div>
-                                <div class="case-descr">
-                                    Заказчик прислал транспортной компанией Seagate ST4000LM024 вместе с диском донором. Оба приехали вскрытые, после неудачных попыток восстановления на Дальнем Востоке.
-                                </div>
-                            </div>
-
-
-                        </div>
-                        <div class="grid-item">
-                            <a href="" class="case-img"><img src="img/image/sec17-6.png" alt=""></a>
-                            <div class="case-content">
-                                <div class="case-data">12 / 03 / 2023</div>
-                                <div class="case-title"><a href="">Восстановление RAID 5 массива из NAS Seagate на ST4000VN000 SATA<div class="hover-arrow">&nbsp;&nbsp;→</div></a></div>
-                                <div class="case-descr">
-                                    RAID 5 массив работал в довольно старом NAS Seagate ST4000VN000. Решили перезагрузить сетевое хранилище, после этого массив определился как пустой, все диски имеют статус Good.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="grid-item">
-                            <a href="#" class="text-link">Смотреть другие наши работы<span>&nbsp;&nbsp;→</span></a>
-                        </div>
-                    </div>
-
-                    
-                </div>
 
                 <div class="post-container seventeenth-block">
                     <h2 class="title-small">Наши кейсы | Примеры восстановления данных</h2>
@@ -1057,7 +976,69 @@
                         <img src="img/image/sec18-22.png" alt="" title="">
                     </div>
                     <div class="descr">«Группа компаний "Детский мир" выражает благодарность специализированному центру восстановления информации Storelab и в частности сотрудникам Вашей компании за профессионализм в работе и оперативность в исполнении заказываемых работ.»</div>
+                    <div class="aside-review-img">
+                        <img src="img/image/sec18-22.png" alt="" title="">
+                    </div>
+                    <div class="descr">«Группа компаний "Детский мир" выражает благодарность специализированному центру восстановления информации Storelab и в частности сотрудникам Вашей компании за профессионализм в работе и оперативность в исполнении заказываемых работ.»</div>
+                    <div class="aside-review-img">
+                        <img src="img/image/sec18-22.png" alt="" title="">
+                    </div>
+                    <div class="descr">«Группа компаний "Детский мир" выражает благодарность специализированному центру восстановления информации Storelab и в частности сотрудникам Вашей компании за профессионализм в работе и оперативность в исполнении заказываемых работ.»</div>
                     <a href="" class="aside-link">Все отзывы</a>                    
+                </div>
+                <div class="aside-item aside-news">
+                    <h2 class="aside-title">Новости</h2>
+                    <div class="pulse">
+                        <div class="pulse-line left-line"></div>
+                        <div class="pulse-line righ-line"></div>
+                    </div>
+                    <a href="" class="aside-link">Закажите бесплатную доставку и получите скидку 15%</a>            
+                    <span class="news-data">18 марта 2023</span>
+                    <a href="" class="aside-link">Восстановление данных RAID 1 массива на жестких дисках SAS</a>            
+                    <span class="news-data">16 марта 2023</span>
+                    <a href="" class="aside-link">Интересные случаи из практики по восстановлению данных</a>            
+                    <span class="news-data">14 марта 2023</span>
+                </div>
+                <div class="aside-item aside-news">
+                    <h2 class="aside-title">Статьи и услуги</h2>
+                    <div class="pulse">
+                        <div class="pulse-line left-line"></div>
+                        <div class="pulse-line righ-line"></div>
+                    </div>
+                    <a href="" class="aside-link">Восстановление данных с IPad устройств</a>            
+                    <a href="" class="aside-link">Восстановление информации баз данных</a>            
+                    <a href="" class="aside-link">Восстановление фотографий (JPG, CR2, PNG, RAW)</a>            
+                    <a href="" class="aside-link">Восстановление баз данных SQL</a>            
+                </div>
+                <div class="aside-item aside-news programms">
+                    <h2 class="aside-title">Программы</h2>
+                    <div class="pulse">
+                        <div class="pulse-line left-line"></div>
+                        <div class="pulse-line righ-line"></div>
+                    </div>
+                    <a href="" class="aside-link">GetDataBack NTFS</a>            
+                    <span class="news-data">Наиболее популярная утилита восстановления информации среди всех существующих програм на сегодняшний день.</span>
+                    <a href="" class="aside-link">RStudio</a>            
+                    <span class="news-data">Простая, удобная и многофункциональная программа для восстановления удаленных данных с самых различных накопителей.</span>
+                    <a href="" class="aside-link">Easy Recovery</a>            
+                    <span class="news-data">Качественная программа для восстановления удаленных данных, которая сегодня используется не только специалистами, но и обычными пользователями.</span>
+                </div>
+                <div class="aside-item clients">
+                    <h2 class="aside-title">Наши клиенты</h2>
+                    <div class="pulse">
+                        <div class="pulse-line left-line"></div>
+                        <div class="pulse-line righ-line"></div>
+                    </div>
+                    <div class="clients-wrapper">
+                        <img src="img/image/sec18-12.png" alt="">
+                        <img src="img/image/sec18-22.png" alt="">
+                        <img src="img/image/sec18-32.png" alt="">
+                        <img src="img/image/sec18-42.png" alt="">
+                        <img src="img/image/sec18-52.png" alt="">
+                        <img src="img/image/sec18-62.png" alt="">
+                        <img src="img/image/sec18-72.png" alt="">
+                        <img src="img/image/sec18-82.png" alt="">
+                    </div>
                 </div>
             </aside>
 <!-- ASIDE RIGHT START -->
