--- a/vosstanovlenie_dannyh_mac.html
+++ b/vosstanovlenie_dannyh_mac.html
@@ -45,16 +45,16 @@
                         </li>
                         <li><a href="#" class="prevent">Информация</a>
                             <ul>
-                                <li><a href="">Программы и утилиты</a></li>
-                                <li><a href="">Конфиденциальность</a></li>
-                                <li><a href="">Юридическим лицам</a></li>
-                                <li><a href="">Команда экспертов</a></li>
-                                <li><a href="">Работа с регионами</a></li>
-                                <li><a href="">Вопросы и ответы</a></li>
-                                <li><a href="">Отзывы клиентов</a></li>
-                                <li><a href="">Наши вакансии</a></li>
-                                <li><a href="">Статьи и обзоры</a></li>
-                                <li><a href="">Наши реквизиты</a></li>
+                                <li><a href="programs.html">Программы и утилиты</a></li>
+                                <li><a href="privacy.html">Конфиденциальность</a></li>
+                                <li><a href="firm.html">Юридическим лицам</a></li>
+                                <li><a href="team.html">Команда экспертов</a></li>
+                                <li><a href="regions-rf.html">Работа с регионами</a></li>
+                                <li><a href="questions.html">Вопросы и ответы</a></li>
+                                <li><a href="review.html">Отзывы клиентов</a></li>
+                                
+                                <li><a href="article.html">Статьи и обзоры</a></li>
+                                <li><a href="rekvizit.html">Наши реквизиты</a></li>
                             </ul>
                         </li>
                     </ul>
