--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                                 </div>
                             </div>
 
-
+<!-- qweweeqe -->
                         </div>
                         <div class="grid-item">
                             <a href="" class="case-img"><img src="img/image/sec17-6.png" alt=""></a>
