add js lazy loading

--- a/dostavka.html
+++ b/dostavka.html
@@ -205,27 +205,27 @@
                 <div class="post-container twentyfirst-block">
                     <h2 class="title-small">Заказать бесплатную доставку</h2>
                     <div class="descr">Закажите бесплатную доставку и получите скидку 15%</div>
-                    <div class="rendered-form">
+                    <form class="rendered-form">
                         <div class="formbuilder-text form-group field-text-1678823666851">
                             <label for="text-1678823666851" class="formbuilder-text-label">Ваше Имя</label>
-                            <input type="text" class="form-control" name="text-1678823666851" access="false" id="text-1678823666851">
+                            <input type="text" class="form-control _req" name="text-1678823666851" access="false" id="text-1678823666851">
                         </div>
                         <div class="formbuilder-number form-group field-number-1678823830535">
                             <label for="number-1678823830535" class="formbuilder-number-label">Контактный<br>телефон</label>
-                            <input type="text" class="form-control" name="number-1678823830535" access="false" id="number-1678823830535">
+                            <input type="text" class="form-control _req" name="number-1678823830535" access="false" id="number-1678823830535">
                         </div>
                         <div class="formbuilder-text form-group field-text-1678823840998">
                             <label for="text-1678823840998" class="formbuilder-text-label">Адрес</label>
-                            <input type="text" class="form-control" name="text-1678823840998" access="false" id="text-1678823840998">
+                            <input type="text" class="form-control _req" name="text-1678823840998" access="false" id="text-1678823840998">
                         </div>
                         <div class="formbuilder-textarea form-group field-textarea-1678823846303">
                             <label for="textarea-1678823846303" class="formbuilder-textarea-label">Удобное время,<br>неисправность</label>
-                            <textarea type="textarea" class="form-control" name="textarea-1678823846303" access="false" id="textarea-1678823846303"></textarea>
+                            <textarea type="textarea" class="form-control _req" name="textarea-1678823846303" access="false" id="textarea-1678823846303"></textarea>
                         </div>
                         <div class="formbuilder-checkbox-group form-group field-checkbox-group-1678823853832">
                             <div class="checkbox-group">
                                 <div class="formbuilder-checkbox">
-                                    <input name="checkbox-group-1678823853832[]" access="false" id="checkbox-group-1678823853832-0" value="option-1" type="checkbox" checked="checked">
+                                    <input name="checkbox-group-1678823853832[]" access="false" id="checkbox-group-1678823853832-0" value="option-1" type="checkbox" checked="checked" class="_req">
                                     <label for="checkbox-group-1678823853832-0"> С <a href="">политикой</a> обработки персональных даных согласен</label>
                                 </div>
                             </div>
@@ -233,7 +233,7 @@
                         <div class="formbuilder-button form-group field-button-1678823866327">
                             <button type="button" class="btn-default btn aside-title" name="button-1678823866327" access="false" id="button-1678823866327">Вызвать курьера</button>
                         </div>
-                    </div>
+                    </form>
                 </div>
 
                 <div class="post-container advantage">
