add news papers

--- a/programs.html
+++ b/programs.html
@@ -349,24 +349,24 @@
                     <h2 class="title-small">Адаптеры для микросхем позволяют нам восстановить любую флешку</h2>
                     <div class="grid">
                         <div class="grid-item">
-                            <a href="#"><img title="title" src="img/image/hdd_recovery1.png" alt="image 1"></a>
-                            <a href="#" class="text-link">Восстановление данных HDD<span>&nbsp;&nbsp;→</span></a>
+                            <a href="hdd.html"><img title="title" src="img/image/hdd_recovery1.png" alt="image 1"></a>
+                            <a href="hdd.html" class="text-link">Восстановление данных HDD<span>&nbsp;&nbsp;→</span></a>
                         </div>
                         <div class="grid-item">
-                          <a href="">#<img title="title" src="img/image/seagate_drives.png" alt="image 2"></a>
-                            <a href="#" class="text-link">Восстановление данных Seagate<span>&nbsp;&nbsp;→</span></a>
+                          <a href="seagate.html"><img title="title" src="img/image/seagate_drives.png" alt="image 2"></a>
+                            <a href="seagate.html" class="text-link">Восстановление данных Seagate<span>&nbsp;&nbsp;→</span></a>
                         </div>
                         <div class="grid-item">
-                          <a href="">#<img title="title" src="img/image/wd_recovery.png" alt="image 3"></a>
-                            <a href="#" class="text-link">Восстановление данных WD<span>&nbsp;&nbsp;→</span></a>
+                          <a href="wd.html"><img title="title" src="img/image/wd_recovery.png" alt="image 3"></a>
+                            <a href="wd.html" class="text-link">Восстановление данных WD<span>&nbsp;&nbsp;→</span></a>
                         </div>
                         <div class="grid-item">
-                          <a href="">#<img title="title" src="img/image/raid_recovery_service (1).png" alt="image 4"></a>
-                            <a href="#" class="text-link">Восстановление данных Raid<span>&nbsp;&nbsp;→</span></a>
+                          <a href="raid.html"><img title="title" src="img/image/raid_recovery_service (1).png" alt="image 4"></a>
+                            <a href="raid.html" class="text-link">Восстановление данных Raid<span>&nbsp;&nbsp;→</span></a>
                         </div>
                         <div class="grid-item">
-                            <a href="#"><img title="title" src="img/image/flash_icon (1).png" alt="image 4"></a>
-                            <a href="#" class="text-link">Восстановление данных Флеш-карт<span>&nbsp;&nbsp;→</span></a>
+                            <a href="flash.html"><img title="title" src="img/image/flash_icon (1).png" alt="image 4"></a>
+                            <a href="flash.html" class="text-link">Восстановление данных Флеш-карт<span>&nbsp;&nbsp;→</span></a>
                           </div>
                     </div>
                 </div>
@@ -571,7 +571,7 @@
 
                         </div>
                         <div class="grid-item">
-                            <a href="#" class="text-link">Смотреть другие наши работы<span>&nbsp;&nbsp;→</span></a>
+                            <a href="review.html" class="text-link">Смотреть другие наши работы<span>&nbsp;&nbsp;→</span></a>
                         </div>
                     </div>
                     
@@ -706,7 +706,7 @@
                     <span class="news-data">18 марта 2023</span>
                     <a href="raid.html" class="aside-link">Восстановление данных RAID 1 массива на жестких дисках SAS</a>            
                     <span class="news-data">16 марта 2023</span>
-                    <a href="" class="aside-link">Интересные случаи из практики по восстановлению данных</a>            
+                    <a href="news.html" class="aside-link">Интересные случаи из практики по восстановлению данных</a>            
                     <span class="news-data">14 марта 2023</span>
                 </div>
                 <div class="aside-item aside-news">
@@ -715,10 +715,10 @@
                         <div class="pulse-line left-line"></div>
                         <div class="pulse-line righ-line"></div>
                     </div>
-                    <a href="" class="aside-link">Восстановление данных с IPad устройств</a>            
-                    <a href="" class="aside-link">Восстановление информации баз данных</a>            
-                    <a href="" class="aside-link">Восстановление фотографий (JPG, CR2, PNG, RAW)</a>            
-                    <a href="" class="aside-link">Восстановление баз данных SQL</a>            
+                    <a href="mac_data-recovery.html" class="aside-link">Нюансы восстановления данных с Apple</a>            
+                    <a href="linux_data-recovery.html" class="aside-link">Восстановление данных с Linux систем</a>            
+                           
+                    <a href="windows_data-recovery.html" class="aside-link">Восстановление данных с операционных систем Windows</a>            
                 </div>
                 <div class="aside-item aside-news programms">
                     <h2 class="aside-title">Программы</h2>
@@ -859,6 +859,11 @@
 
         <div class="copyright">© 1995-2023 Storelab. Все права защищены.</div>
     </footer>
+<div class="overlay1"></div>
+    <div class="thankyou" id="thankyou">
+        <h2 class="thankyou-title">Спасибо!</h2>
+        <div class="descr">Мы перезвоним вам в течение минуты.</div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="js/script.js"></script>
