--- a/raid.html
+++ b/raid.html
@@ -694,7 +694,7 @@
                             </div>
                         </div>
                         <div class="grid-item">
-                            <a href="#" class="text-link">Смотреть другие наши работы<span>&nbsp;&nbsp;→</span></a>
+                            <a href="review.html" class="text-link">Смотреть другие наши работы<span>&nbsp;&nbsp;→</span></a>
                         </div>
                     </div>
 
@@ -893,7 +893,7 @@
                     <span class="news-data">18 марта 2023</span>
                     <a href="raid.html" class="aside-link">Восстановление данных RAID 1 массива на жестких дисках SAS</a>            
                     <span class="news-data">16 марта 2023</span>
-                    <a href="" class="aside-link">Интересные случаи из практики по восстановлению данных</a>            
+                    <a href="news.html" class="aside-link">Интересные случаи из практики по восстановлению данных</a>            
                     <span class="news-data">14 марта 2023</span>
                 </div>
                 <div class="aside-item aside-news">
@@ -902,10 +902,10 @@
                         <div class="pulse-line left-line"></div>
                         <div class="pulse-line righ-line"></div>
                     </div>
-                    <a href="" class="aside-link">Восстановление данных с IPad устройств</a>            
-                    <a href="" class="aside-link">Восстановление информации баз данных</a>            
-                    <a href="" class="aside-link">Восстановление фотографий (JPG, CR2, PNG, RAW)</a>            
-                    <a href="" class="aside-link">Восстановление баз данных SQL</a>            
+                    <a href="mac_data-recovery.html" class="aside-link">Нюансы восстановления данных с Apple</a>            
+                    <a href="linux_data-recovery.html" class="aside-link">Восстановление данных с Linux систем</a>            
+                           
+                    <a href="windows_data-recovery.html" class="aside-link">Восстановление данных с операционных систем Windows</a>            
                 </div>
                 <div class="aside-item aside-news programms">
                     <h2 class="aside-title">Программы</h2>
@@ -1047,6 +1047,11 @@
 
         <div class="copyright">© 1995-2023 Storelab. Все права защищены.</div>
     </footer>
+<div class="overlay1"></div>
+    <div class="thankyou" id="thankyou">
+        <h2 class="thankyou-title">Спасибо!</h2>
+        <div class="descr">Мы перезвоним вам в течение минуты.</div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="js/script.js"></script>
