--- a/regions-rf.html
+++ b/regions-rf.html
@@ -229,7 +229,7 @@
                             <div class="checkbox-group">
                                 <div class="formbuilder-checkbox">
                                     <input name="checkbox-group-1678823853832[]" access="false" id="checkbox-group-1678823853832-0" value="option-1" type="checkbox" checked="checked" class="_req">
-                                    <label for="checkbox-group-1678823853832-0"> С <a href="">политикой</a> обработки персональных даных согласен</label>
+                                    <label for="checkbox-group-1678823853832-0"> С <a href="privacy-sity.html">политикой</a> обработки персональных даных согласен</label>
                                 </div>
                             </div>
                         </div>
@@ -464,7 +464,7 @@
 
                         </div>
                         <div class="grid-item">
-                            <a href="#" class="text-link">Смотреть другие наши работы<span>&nbsp;&nbsp;→</span></a>
+                            <a href="review.html" class="text-link">Смотреть другие наши работы<span>&nbsp;&nbsp;→</span></a>
                         </div>
                     </div>
                     
@@ -970,7 +970,7 @@
                     <span class="news-data">18 марта 2023</span>
                     <a href="raid.html" class="aside-link">Восстановление данных RAID 1 массива на жестких дисках SAS</a>            
                     <span class="news-data">16 марта 2023</span>
-                    <a href="" class="aside-link">Интересные случаи из практики по восстановлению данных</a>            
+                    <a href="news.html" class="aside-link">Интересные случаи из практики по восстановлению данных</a>            
                     <span class="news-data">14 марта 2023</span>
                 </div>
                 <div class="aside-item aside-news">
@@ -979,10 +979,10 @@
                         <div class="pulse-line left-line"></div>
                         <div class="pulse-line righ-line"></div>
                     </div>
-                    <a href="" class="aside-link">Восстановление данных с IPad устройств</a>            
-                    <a href="" class="aside-link">Восстановление информации баз данных</a>            
-                    <a href="" class="aside-link">Восстановление фотографий (JPG, CR2, PNG, RAW)</a>            
-                    <a href="" class="aside-link">Восстановление баз данных SQL</a>            
+                    <a href="mac_data-recovery.html" class="aside-link">Нюансы восстановления данных с Apple</a>            
+                    <a href="linux_data-recovery.html" class="aside-link">Восстановление данных с Linux систем</a>            
+                           
+                    <a href="windows_data-recovery.html" class="aside-link">Восстановление данных с операционных систем Windows</a>            
                 </div>
                 <div class="aside-item aside-news programms">
                     <h2 class="aside-title">Программы</h2>
@@ -1124,6 +1124,11 @@
 
         <div class="copyright">© 1995-2023 Storelab. Все права защищены.</div>
     </footer>
+<div class="overlay1"></div>
+    <div class="thankyou" id="thankyou">
+        <h2 class="thankyou-title">Спасибо!</h2>
+        <div class="descr">Мы перезвоним вам в течение минуты.</div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="js/script.js"></script>
