add form send method with use async/await

--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
                             </div>
                         </div>
                         <div class="formbuilder-button form-group field-button-1678823866327">
-                            <button type="button" class="btn-default btn aside-title" name="button-1678823866327"  id="button-1678823866327">Вызвать курьера</button>
+                            <button type="submit" class="btn-default btn aside-title" name="button-1678823866327"  id="button-1678823866327">Вызвать курьера</button>
                         </div>
                     </form>
                 </div>
